# rust-buf-ref-reader

./: Cargo.toml  README.md
benches/: bench_hashmap.rs  bench_read.rs  bench_read_until.rs  buffer.rs
src/: bench_hashmap.rs  bench_read.rs  bench_read_until.rs  buffer.rs  lib.rs
src/buffer/: mmap.rs  mod.rs  vec.rs
