[package]
name = "buf-ref-reader"
description = "Faster, growable buffering reader for when there's little to no need to modify data, nor to keep it alive past next read."
version = "0.2.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/rust-buf-ref-reader"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
memchr = "2"

[dev-dependencies]
fnv = "1"

# use libc's memchr to make comparison with BufReader fair
# as of 1.32.0:
# - modules in std::io import std::memchr::memchr (which is private),
# - std::memchr::memchr just calls sys::memchr::memchr…
# - …which, at least on unix, is just a thin layer upon libc::memchr.
memchr = { version = "2", default-features = false, features = ["libc"]}
